# RandomVideoPlayer

./: README.md  pyproject.toml  run_randomvideoplayer.py
.github/workflows/: build-windows-exe.yml
randomvideoplayer/: __main__.py  app_config.py  file_logger.py  gui.py  mpv_utils.py  playlist_builder.py
