[tool.poetry]
name = "randomvideoplayer"
version = "0.1.0"
description = "Random video player with GUI and mpv integration"
authors = ["Nathaniel Hartmann <nathaniel.hartmann@partner.kit.edu>"]
readme = "README.md"
packages = [{ include = "randomvideoplayer" }]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[tool.poetry.scripts]
randomvideoplayer = "randomvideoplayer.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
