[project]
name = "randomvideoplayer"
version = "0.3.0"
description = "Random WebM video player GUI that uses mpv for seamless shuffled playback over very large collections."
authors = [
    { name = "Nathaniel Hartmann", email = "nathaniel.hartmann@partner.kit.edu" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[project.gui-scripts]
randomvideoplayer = "randomvideoplayer.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "randomvideoplayer" }
]
